--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -21,7 +21,8 @@
         <div class="list-unstyled font-medium">
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/users/Index">Dashboard</a>
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/products/Index">Product</a>
-            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/orders/Index">Orders</a> 
+            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/orders/Index">Orders</a>
+            <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/orders/Waitting">Waitting</a>
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/ranks/Index">Ranks</a>
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/promocodes/Index">Promocodes</a>
             <a class="ml-4 px-4 py-3 hover:bg-gray-100 cursor-pointer row" style="border-radius: 50px 0 0 50px;" href="/User/Logout">LOGOUT</a>
