--- a/Views/orders/Details.cshtml
+++ b/Views/orders/Details.cshtml
@@ -35,13 +35,7 @@
             @Html.DisplayFor(model => model.started_at)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.finished_at)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.finished_at)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.shipping_fee)
@@ -66,17 +60,6 @@
         <dd>
             @Html.DisplayFor(model => model.pending)
         </dd>
-
-    
-
-        <dt>
-            @Html.DisplayNameFor(model => model.completed)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.completed)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.canceled)
         </dt>
@@ -84,8 +67,14 @@
         <dd>
             @Html.DisplayFor(model => model.canceled)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.request_cancel)
+        </dt>
 
-     
+        <dd>
+            @Html.DisplayFor(model => model.request_cancel)
+        </dd>
+
 
         <dt>
             @Html.DisplayNameFor(model => model.customer.email)
