--- a/Views/ShoppingCart/ShowToCart.cshtml
+++ b/Views/ShoppingCart/ShowToCart.cshtml
@@ -1,16 +1,19 @@
-﻿
+﻿@model WebApplication1.Models.Carts
 @{
     ViewBag.Title = "ShowToCart";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model WebApplication1.Models.Carts
+
 @Html.Partial("_Notifications")
 <main class="p-6">
-    <div class="text-neutral-500 text-xs px-4">
-        (@Session["Quantity_pro"] items)
+    <div class="flex space-x-2 mb-2">
+        <div class="text-4xl font-bold">Shopping</div>
+        <div class="text-neutral-500 text-xs px-4">
+            (@Session["Quantity_pro"] items)
+        </div>
     </div>
     <div class="flex mb-lg-5">
-        <a class="text-2xl font-bold" href="/Home/Index">Continue Shopping</a>
+        <a class="text-lg font-medium hover:text-gray-200" href="/Home/Index">Continue Shopping</a>
     </div>
 
 
@@ -80,7 +83,7 @@
                         @*Remove/Check*@
                         <div class="col">
                             <div class="flex">
-                                <a href="/Shopping/RemoveCart/@item.Shopping_product.id_product" class="bg-red-100 text-center py-1 px-2.5 hover:bg-red-200 rounded-md">
+                                <a href="/ShoppingCart/RemoveCart/@item.Shopping_product.id_product" class="bg-red-100 text-center py-1 px-2.5 hover:bg-red-200 rounded-md">
                                     <i class="fa-solid fa-xmark text-red-600 text-xs"></i>
                                 </a>
                             </div>
@@ -90,71 +93,71 @@
             </div>
 
             @*Place Order*@
-        <div class="col-lg-3">
-            <div class="font-medium mb-2">Shipping Info</div>
-            <div class="text-gray-400 font-light text-xs">Fill your order</div>
-            @using (Html.BeginForm("CheckOut", "ShoppingCart"))
-            {
+            <div class="col-lg-3">
+                <div class="font-medium mb-2">Shipping Info</div>
+                <div class="text-gray-400 font-light text-xs">Fill your order</div>
+                @using (Html.BeginForm("CheckOut", "ShoppingCart"))
+                {
 
-                @*Email*@
-                <div class="mt-2 text-black">
-                    <div class="relative w-full" data-te-input-wrapper-init>
-                        <label for="email" class="text-sm">Email</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" required/>
+                    @*Email*@
+                    <div class="mt-2 text-black">
+                        <div class="relative w-full" data-te-input-wrapper-init>
+                            <label for="email" class="text-sm">Email</label><br />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your email" name="email" required />
+                        </div>
                     </div>
-                </div>
-                <div class="mt-2 text-black">
-                    <div class="relative w-full" data-te-input-wrapper-init>
-                        <label for="phone" class="text-sm">Phone</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" required/>
+                    <div class="mt-2 text-black">
+                        <div class="relative w-full" data-te-input-wrapper-init>
+                            <label for="phone" class="text-sm">Phone</label><br />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your phone number" name="phone" required />
+                        </div>
                     </div>
-                </div>
-                <div class="mt-2 text-black">
-                    <div class="relative w-full" data-te-input-wrapper-init>
-                        <label for="street" class="text-sm">Street</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address" required/>
+                    <div class="mt-2 text-black">
+                        <div class="relative w-full" data-te-input-wrapper-init>
+                            <label for="street" class="text-sm">Street</label><br />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your street" name="address" required />
+                        </div>
                     </div>
-                </div>
-                <div class="mt-2 text-black">
-                    <div class="relative w-full" data-te-input-wrapper-init>
-                        <label for="district" class="text-sm">District</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" required/>
+                    <div class="mt-2 text-black">
+                        <div class="relative w-full" data-te-input-wrapper-init>
+                            <label for="district" class="text-sm">District</label><br />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your district" name="district" required />
+                        </div>
                     </div>
-                </div>
-                <div class="mt-2 text-black">
-                    <div class="relative w-full" data-te-input-wrapper-init>
-                        <label for="ward" class="text-sm">Ward</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" required/>
+                    <div class="mt-2 text-black">
+                        <div class="relative w-full" data-te-input-wrapper-init>
+                            <label for="ward" class="text-sm">Ward</label><br />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your ward" name="ward" required />
+                        </div>
                     </div>
-                </div>
-                <div class="mt-2 text-black">
-                    <div class="relative w-full" data-te-input-wrapper-init>
-                        <label for="city" class="text-sm">City</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city" required/>
+                    <div class="mt-2 text-black">
+                        <div class="relative w-full" data-te-input-wrapper-init>
+                            <label for="city" class="text-sm">City</label><br />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your city" name="city" required />
+                        </div>
                     </div>
-                </div>
-                <div class="mt-2 text-black">
-                    <div class="relative w-full" data-te-input-wrapper-init>
-                        <label for="card-number" class="text-sm">Card</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your card number" name="card-number" />
+                    <div class="mt-2 text-black">
+                        <div class="relative w-full" data-te-input-wrapper-init>
+                            <label for="card-number" class="text-sm">Card</label><br />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your card number" name="card-number" />
+                        </div>
                     </div>
-                </div>
 
-                @*Promo Code*@
-                <div class="font-medium my-2">Apply Coupon</div>
-                <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
+                    @*Promo Code*@
+                    <div class="font-medium my-2">Apply Coupon</div>
+                    <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
 
-                @*Enter promo-code*@
-                <div class="mt-2 text-black">
-                    <div class="relative w-full" data-te-input-wrapper-init>
-                        <label for="code" class="text-sm">Promocode</label><br />
-                        <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your promocode" name="code" />
+                    @*Enter promo-code*@
+                    <div class="mt-2 text-black">
+                        <div class="relative w-full" data-te-input-wrapper-init>
+                            <label for="code" class="text-sm">Promocode</label><br />
+                            <input type="text" class="font-light text-black border-b py-2 pl-3 w-full mt-2" placeholder="Enter your promocode" name="code" />
+                        </div>
                     </div>
-                </div>
 
-                @*Apply Promo-Code*@
-                <!--<a class="bg-yellow-300 py-2.5 px-3 text-black text-xs font-semibold ml-2 rounded-md" style="width:fit-content; height: fit-content;">Apply</a>
-            </div>-->
+                    @*Apply Promo-Code*@
+                    <!--<a class="bg-yellow-300 py-2.5 px-3 text-black text-xs font-semibold ml-2 rounded-md" style="width:fit-content; height: fit-content;">Apply</a>
+                    </div>-->
 
 
                     @*Order Sumamry*@
